--- a/FinalProjectUAS/app/src/main/res/layout/laptop.xml
+++ b/FinalProjectUAS/app/src/main/res/layout/laptop.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvMerk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Merk Handphone"
+        android:text="Merk Laptop"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -19,14 +19,14 @@
         android:id="@+id/tvSeri"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tipe Handphone"
+        android:text="Tipe Laptop"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvHarga"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Harga Handphone"
+        android:text="Harga Laptop"
         android:textSize="16sp" />
 
 </LinearLayout>
