--- a/FinalProjectUAS/app/src/main/res/layout/activity_main.xml
+++ b/FinalProjectUAS/app/src/main/res/layout/activity_main.xml
@@ -109,7 +109,7 @@
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/aboutme"
+                android:id="@+id/tentang"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
