--- a/FinalProjectUAS/app/src/main/res/layout/activity_about.xml
+++ b/FinalProjectUAS/app/src/main/res/layout/activity_about.xml
@@ -4,174 +4,92 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBlue"
     tools:context=".AboutActivity">
-
-    <ImageView
-        android:id="@+id/img_salsa"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="328dp"
-        tools:srcCompat="@drawable/fauzi" />
-
-    <TextView
-        android:id="@+id/nimSalsa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="NIM : "
-        android:textColor="#000000"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="188dp"
-        tools:layout_editor_absoluteY="384dp" />
-
-    <TextView
-        android:id="@+id/kelas_salsa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="kelas"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="272dp"
-        tools:layout_editor_absoluteY="436dp" />
-
-    <TextView
-        android:id="@+id/nim_salsa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="nim"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="259dp"
-        tools:layout_editor_absoluteY="384dp" />
-
-    <TextView
-        android:id="@+id/kelasSalsa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="Kelas : "
-        android:textColor="#000000"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="185dp"
-        tools:layout_editor_absoluteY="436dp" />
-
-    <TextView
-        android:id="@+id/nama_salsa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="nama"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="259dp"
-        tools:layout_editor_absoluteY="328dp" />
-
-    <TextView
-        android:id="@+id/namaSalsa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="Nama : "
-        android:textColor="#000000"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="189dp"
-        tools:layout_editor_absoluteY="328dp" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:layout_marginBottom="39dp"
+        android:background="@android:color/darker_gray"
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/img_fauzi"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="88dp"
+        android:id="@+id/imageView3"
+        android:layout_width="160dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="21dp"
+        app:layout_constraintBottom_toTopOf="@+id/fauzi"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/fauzi" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:srcCompat="@drawable/fauzi" />
+
 
     <TextView
-        android:id="@+id/namaFauzi"
+        android:id="@+id/fauzi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="144dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Nama : "
+        android:layout_marginBottom="10dp"
+        android:text="Dwi Febi Fauzi"
         android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/nimfauzi"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/nimFauzi"
+        android:id="@+id/nimfauzi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="141dp"
-        android:layout_marginEnd="163dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="NIM : "
+        android:layout_marginBottom="26dp"
+        android:text="18090125"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintStart_toStartOf="@+id/fauzi"
+        app:layout_constraintTop_toBottomOf="@+id/fauzi" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="152dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/fauzi3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nimfauzi"
+        app:srcCompat="@drawable/anshalsa" />
 
     <TextView
-        android:id="@+id/kelas_fauzi"
+        android:id="@+id/fauzi3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="193dp"
-        android:layout_marginEnd="88dp"
-        android:text="kelas"
+        android:layout_marginBottom="17dp"
+        android:text="Asri Nihal Salsabila"
         android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/nimfauzi3"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <TextView
-        android:id="@+id/nim_fauzi"
+        android:id="@+id/nimfauzi3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="141dp"
-        android:layout_marginEnd="104dp"
-        android:text="nim"
+        android:layout_marginBottom="35dp"
+        android:text="18090087"
         android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/fauzi3"
+        app:layout_constraintTop_toBottomOf="@+id/fauzi3" />
 
-    <TextView
-        android:id="@+id/kelasFauzi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="193dp"
-        android:layout_marginEnd="149dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Kelas : "
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/nama_fauzi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="84dp"
-        android:text="nama"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
