--- a/FinalProjectUAS/app/src/main/res/layout/activity_hp.xml
+++ b/FinalProjectUAS/app/src/main/res/layout/activity_hp.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_margin="10dp"
-    tools:context=".hp.HPActivity">
+    tools:context=".hp.HPActivity"
+    android:background="@color/colorBlue">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@android:color/darker_gray"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
