--- a/FinalProjectUAS/app/src/main/res/layout/activity_main.xml
+++ b/FinalProjectUAS/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:scrollbars="none"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/colorBlue">
 
     <LinearLayout
         android:layout_width="300dp"
@@ -21,6 +22,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:text="Dashboard"
+            android:textColor="@color/design_default_color_on_primary"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -58,7 +60,8 @@
                         android:layout_marginTop="10dp"
                         android:padding="10dp"
                         android:text="@string/Phone"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -93,7 +96,8 @@
                         android:layout_marginTop="10dp"
                         android:padding="10dp"
                         android:text="@string/Laptop"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -136,7 +140,8 @@
                         android:layout_marginTop="10dp"
                         android:padding="10dp"
                         android:text="@string/About"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -171,7 +176,8 @@
                         android:layout_marginTop="10dp"
                         android:padding="10dp"
                         android:text="@string/Keluar"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
