--- a/FinalProjectUAS/app/src/main/res/layout/hp.xml
+++ b/FinalProjectUAS/app/src/main/res/layout/hp.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    android:weightSum="10">
+    android:weightSum="10"
+    android:background="@color/colorBlue">
 
     <TextView
         android:id="@+id/tvMerk"
