--- a/FinalProjectUAS/app/src/main/res/layout/activity_splash.xml
+++ b/FinalProjectUAS/app/src/main/res/layout/activity_splash.xml
@@ -1,37 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlue">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="298dp"
-        android:layout_height="281dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="250dp"
-        android:src="@drawable/logo" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imageView"
-        android:gravity="center"
-        android:padding="30dp"
-        android:text="Data Barang"
-        android:textColor="@android:color/white"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+    android:background="@color/gray">
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/splash_screen_progress_bar"
+        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:indeterminateTint="@android:color/white"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        android:progressTint="#6995c1" />
 
-</LinearLayout>
+</RelativeLayout>
